# GaussianSceneRender-Python

./: .gitignore  demo-notebook.ipynb  main.py  readme.md  render.py  requirements.txt
cuda/: render.cu
gaussian_splatting/: __init__.py  gaussian_scene.py  gaussians.py  images.py
utils/: __init__.py  camera_utils.py  cuda_utils.py  data_utils.py  general_utils.py  scene_utils.py  schema.py
vulkan/: CMakeLists.txt  readme.md
vulkan-rasterization/: CMakeLists.txt  export-data-vulkan.ipynb  readme.md
vulkan-rasterization/include/: file_loader.h  gaussian_pipeline.h  vulkan_setup.h
vulkan-rasterization/shaders/: gaussian.frag  gaussian.vert
vulkan-rasterization/src/: file_loader.cpp  gaussian_pipeline.cpp  main.cpp  vulkan_setup.cpp
vulkan/shaders/: compute_shader.glsl  compute_shader.spv
vulkan/src/: main.cpp  utils.hpp  vulkan_setup.cpp  vulkan_setup.hpp
